--- a/public/style.css
+++ b/public/style.css
@@ -1,53 +1,57 @@
-/****** Main Styling ******/
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Roboto:wght@300;400;700&display=swap");
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
 
 body {
+  margin: 0;
+  width: 100%;
+  height: 100vh;
   font-family: "Roboto", sans-serif;
-  font-size: 16px;
-  color: #222;
-  background-color: #ecf0f1;
-  text-align: center;
 }
 
-.container {
-  padding: 0;
-  margin-top: 40px;
+header {
+  width: 100%;
+  height: 100px;
 }
 
-.footer {
-  margin-top: 60px;
+.top-bar {
+  width: 100%;
+  height: 27px;
+  background-color: #2c4886;
 }
 
-ol {
-  list-style-position: inside;
-}
-ul {
-  list-style-type: none;
+.title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 78px;
+  color: white;
+  background-color: #395697;
 }
 
-a {
-  color: #2574a9;
+header h1 {
+  margin-top: 43px;
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 50px;
 }
 
-input {
-  display: block;
-  position: relative;
-  margin: 10px auto;
+main {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
 }
-input#button {
-  width: 230px;
-}
-.view {
-  position: relative;
-  margin: auto;
-  margin-top: 40px;
-  border: 1px solid #aaa;
-  padding: 20px;
-  width: 60%;
-  min-width: 400px;
-}
-/****** Logo Div Styling ******/
 
-img {
-  margin: 20px auto 0 auto;
-  display: block;
+.content { 
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 70px;
+  width: 1000px;
+  height: 500px;
+  border: 5px solid #3b5998;
 }
