--- a/public/style.css
+++ b/public/style.css
@@ -9,6 +9,7 @@ body {
   margin: 0;
   width: 100%;
   height: 100vh;
+  background-color: rgb(0, 0, 0);
   font-family: "Roboto", sans-serif;
 }
 
@@ -46,12 +47,72 @@ main {
   height: 100%;
 }
 
-.content { 
+.content {
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-top: 70px;
-  width: 1000px;
-  height: 500px;
-  border: 5px solid #3b5998;
+  margin-top: 120px;
+  width: 700px;
+  height: 300px;
+  border-radius: 25px;
+  background-color: #395697;
+}
+
+h2 {
+  margin-top: 60px;
+  color: white;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 32px;
+}
+
+form {
+  margin-top: 10px;
+}
+
+[type="submit"] {
+  width: 107px;
+  height: 30px;
+  border: 1px solid #999;
+  border-radius: 3px;
+  color: -internal-light-dark(rgb(241, 15, 15), rgb(247, 12, 12));
+  background-color: yellow;
+  font-family: "Roboto", sans-serif;
+  font-weight: 900;
+  cursor: pointer;
+}
+
+[type="file"] {
+  margin-right: 100px;
+  margin-top: 50px;
+  width: 200px;
+  border-radius: 3px;
+  background-color: rgb(255, 255, 255);
+  user-select: none;
+}
+
+#inputfield::-webkit-file-upload-button {
+  float: right;
+  visibility: hidden;
+}
+
+#inputfield::before {
+  display: inline-block;
+  width: 100px;
+  height: 30px;
+  margin-right: 7px;
+  padding: 6px 8px;
+  border: 1px solid #999;
+  border-radius: 3px;
+  outline: none;
+  background-color: yellow;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
+  -webkit-user-select: none;
+  cursor: pointer;
+  content: "Choose file";
+}
+#inputfield:active::before {
+  background: -webkit-linear-gradient(top, #e3e3e3, #f9f9f9);
 }
