--- a/views/index.html
+++ b/views/index.html
@@ -19,7 +19,7 @@
   </header>
   <main>
     <div class="content">
-      <p>Upload a file to receive a response of the file's name, size, and type.</p>
+      <h2>Upload a File to Receive File Information (Name, Size, and Type)</h2>
       <form enctype="multipart/form-data" method="POST" action="/api/fileanalyse">
         <input id="inputfield" type="file" name="upfile">
         <input id="button" type="submit" value="Upload">
@@ -29,8 +29,6 @@
 </body>
 
 </html>
-
-
 
 
 <!-- <!DOCTYPE html>
